# console_3ds

./: Cargo.toml  README.md  bindgen.sh  notes.md
examples/: basic.rs  demo.rs
src/: buffered.rs  ffi.rs  lib.rs  unbuffered.rs
src/devoptab/: bindings.rs
src/ffi/: generated.rs  types.h
