[package]
name = "console_3ds"
version = "0.1.0"
edition = "2021"
authors = [""]

[dependencies]
ctru-rs = { git = "https://github.com/Meziu/ctru-rs.git" }
fontdue = "0.7.2"
libc = { path = "../libc" }

# Without this, font loading takes a really long time at startup
[profile.dev.package.ttf-parser]
opt-level = 3
