[package]
name = "console_3ds"
version = "0.1.0"
edition = "2021"
authors = [""]

[features]
default = []
debug-grid = []

[dependencies]
ctru-rs = { git = "https://github.com/Meziu/ctru-rs.git" }
fontdue = "0.7.2"
libc = "0.2.125"

# A bit faster for running the examples, etc.
[profile.dev]
opt-level = 1

[profile.dev.package.ttf-parser]
opt-level = 3
